--- a/templates/layouts/app.html
+++ b/templates/layouts/app.html
@@ -19,6 +19,7 @@
 
         {% block content %}{% endblock %}
 
+        {% include 'inc/footer.html' %}
     </main>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAz77U5XQuEME6TpftaMdX0bBelQxXRlM"></script>
