--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
-Hello World from BNB
+{% extends 'layouts/app.html' %}
+{% load static %}
+{% block title %} Home {% endblock %}
+{% block content %}
+
+    {% include 'inc/hero.html' %}
+
+{% endblock %}
