--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,38 @@
 
     {% include 'inc/hero.html' %}
 
+    <section class="layout-pt-md layout-pb-md bg-light-2">
+        <div class="container">
+            <div class="row y-gap-30">
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/1.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Best Price Guarantee</h4>
+                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/2.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Easy & Quick Booking</h4>
+                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                <div class="d-flex pr-30">
+                    <img class="size-50" src="{% static 'img/featureIcons/3.svg' %}" alt="image">
+                    <div class="ml-15">
+                        <h4 class="text-18 fw-500">Customer Care 24/7</h4>
+                        <p class="text-15 mt-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
