--- a/templates/index.html
+++ b/templates/index.html
@@ -39,4 +39,64 @@
         </div>
     </section>
 
+    <section class="layout-pt-md layout-pb-lg">
+        <div data-anim-wrap class="container">
+            <div data-anim-child="slide-up delay-1" class="row y-gap-20 justify-center text-center">
+                <div class="col-auto">
+                    <div class="sectionTitle -md">
+                        <h2 class="sectionTitle__title">Featured Rooms</h2>
+                        <p class="sectionTitle__text mt-5 sm:mt-0">Interdum et malesuada fames ac ante ipsum</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row y-gap-30 pt-40 sm:pt-20">
+                <div data-anim-child="slide-up delay-2" class="col-lg-3 col-sm-6">
+                    <a href="cruise-single.html" class="cruiseCard -type-1 rounded-4 ">
+                        <div class="cruiseCard__image">
+                            <div class="cardImage ratio ratio-6:5">
+                                <div class="cardImage__content">
+                                    <img class="rounded-4 col-12" src="img/cruises/1.png" alt="image">
+                                </div>
+                                <div class="cardImage__wishlist">
+                                    <button class="button -blue-1 bg-white size-30 rounded-full shadow-2">
+                                        <i class="icon-heart text-12"></i>
+                                    </button>
+                                </div>
+                                <div class="cardImage__leftBadge">
+                                    <div class="py-5 px-15 rounded-right-4 text-12 lh-16 fw-500 uppercase bg-dark-1 text-white">
+                                        Cruise only
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cruiseCard__content mt-10">
+                            <div class="text-14 lh-14 text-light-1 mb-5">Norwegian Getawayy</div>
+                            <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
+                                <span>7 Night Cruise to the Western Mediterranean</span>
+                            </h4>
+                            <p class="text-light-1 lh-14 text-14 mt-5"></p>
+                            <div class="row y-gap-20 justify-between items-center pt-5">
+                                <div class="col-auto">
+                                    <div class="d-flex items-center">
+                                        <div class="icon-star text-yellow-1 text-10 mr-5"></div>
+                                        <div class="text-14 text-light-1">
+                                            <span class="text-15 text-dark-1 fw-500">4.82</span>
+                                            94 reviews
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="text-14 text-light-1">
+                                        From
+                                        <span class="text-16 fw-500 text-dark-1">US$72</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
