Add about section

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,4 +99,32 @@
         </div>
     </section>
 
+    <section class="section-bg layout-pt-lg layout-pb-lg">
+        <div class="section-bg__item -right -w-1165 bg-light-2"></div>
+            <div class="section-bg__item -video-left">
+                <div class="row y-gap-30">
+                    <div class="col-sm-6">
+                        <img src="https://www.bemytravelmuse.com/wp-content/uploads/2017/04/rwandathingstodo-10-817x1024.jpg" alt="image">
+                    </div>
+        
+                    <div class="col-sm-6">
+                        <img src="https://s.france24.com/media/display/f5dfd014-bde7-11e9-a846-005056bf87d6/w:980/p:16x9/kigali-rwanda-m.jpg" alt="image">
+                    </div>
+                </div>
+            </div>
+            <div class="container lg:mt-30">
+                <div class="row">
+                    <div class="offset-xl-6 col-xl-5 col-lg-6">
+                    <h2 class="text-30 fw-600">B&B a best place to spend you vacation</h2>
+                    <p class="text-dark-1 mt-40 lg:mt-20 sm:mt-15">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <div class="d-inline-block mt-40 lg:mt-30 sm:mt-20">
+                        <a href="#" class="button -md -blue-1 bg-yellow-1 text-dark-1">
+                            Learn More <div class="icon-arrow-top-right ml-15"></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
