--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,17 +12,11 @@
                         {% csrf_token %}
                         <div class="row y-gap-20">
                             <div class="col-12">
-                                <h1 class="text-22 fw-500">Create an account</h1>
+                                <h1 class="text-22 fw-500">Sign in you account</h1>
                                 <p class="mt-10">
-                                    Already have an account? 
-                                    <a href="{% url 'auth:login' %}" class="text-blue-1">Log in</a>
+                                    Don't have account? 
+                                    <a href="{% url 'auth:register' %}" class="text-blue-1">Sign Up</a>
                                 </p>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-input ">
-                                    {{ form.name }}
-                                    <label class="lh-1 text-14 text-light-1">Name</label>
-                                </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-input ">
@@ -32,25 +26,13 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-input ">
-                                    {{ form.phone_number }}
-                                    <label class="lh-1 text-14 text-light-1">Phone Number</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-input ">
-                                    <input type="password" required name="password1">
+                                    {{ form.password }}
                                     <label class="lh-1 text-14 text-light-1">Password</label>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <div class="form-input ">
-                                    <input type="password" required name="password2">
-                                    <label class="lh-1 text-14 text-light-1">Confirm Password</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
                                 <button type="submit" class="button py-20 -dark-1 bg-blue-1 text-white" style="width: 100%;">
-                                    Create Account <div class="icon-arrow-top-right ml-15"></div>
+                                    Sign In <div class="icon-arrow-top-right ml-15"></div>
                                 </button>
                             </div>
                         </div>
