--- a/templates/index.html
+++ b/templates/index.html
@@ -39,65 +39,97 @@
         </div>
     </section>
 
-    <section class="layout-pt-md layout-pb-lg">
-        <div data-anim-wrap class="container">
-            <div data-anim-child="slide-up delay-1" class="row y-gap-20 justify-center text-center">
-                <div class="col-auto">
-                    <div class="sectionTitle -md">
-                        <h2 class="sectionTitle__title">Featured Rooms</h2>
-                        <p class="sectionTitle__text mt-5 sm:mt-0">Interdum et malesuada fames ac ante ipsum</p>
+    {% for room in featuredRooms %}
+        <section class="layout-pt-md layout-pb-lg">
+            <div data-anim-wrap class="container">
+                <div data-anim-child="slide-up delay-1" class="row y-gap-20 justify-center text-center">
+                    <div class="col-auto">
+                        <div class="sectionTitle -md">
+                            <h2 class="sectionTitle__title">Featured Rooms</h2>
+                            <p class="sectionTitle__text mt-5 sm:mt-0">Interdum et malesuada fames ac ante ipsum</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row y-gap-30 pt-40 sm:pt-20">
-                <div data-anim-child="slide-up delay-2" class="col-lg-3 col-sm-6">
-                    <a href="cruise-single.html" class="cruiseCard -type-1 rounded-4 ">
-                        <div class="cruiseCard__image">
-                            <div class="cardImage ratio ratio-6:5">
-                                <div class="cardImage__content">
-                                    <img class="rounded-4 col-12" src="img/cruises/1.png" alt="image">
-                                </div>
-                                <div class="cardImage__wishlist">
-                                    <button class="button -blue-1 bg-white size-30 rounded-full shadow-2">
-                                        <i class="icon-heart text-12"></i>
-                                    </button>
-                                </div>
-                                <div class="cardImage__leftBadge">
-                                    <div class="py-5 px-15 rounded-right-4 text-12 lh-16 fw-500 uppercase bg-dark-1 text-white">
-                                        Cruise only
+                <div class="row y-gap-30 pt-40 sm:pt-20">
+                    <div data-anim-child="slide-up delay-3" class="col-lg-3 col-sm-6">
+                        <a href="#" class="cruiseCard -type-1 rounded-4">
+                            <div class="cruiseCard__image">
+                                <div class="cardImage ratio ratio-6:5">
+                                    <div class="cardImage__content">
+                                        <div class="cardImage-slider rounded-4 overflow-hidden js-cardImage-slider">
+                                            <div class="swiper-wrapper">
+                                                <!-- First, include the primary image from the Room model -->
+                                                <div class="swiper-slide">
+                                                    <img class="col-12" src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                </div>
+
+                                                <!-- Then, loop through the RoomImage instances -->
+                                                {% for image in room.images.all %}
+                                                <div class="swiper-slide">
+                                                    <img class="col-12" src="{{ image.image.url }}" alt="{{ room.name }}">
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+                                            <div class="cardImage-slider__pagination js-pagination"></div>
+                                            <div class="cardImage-slider__nav -prev">
+                                                <button class="button -blue-1 bg-white size-30 rounded-full shadow-2 js-prev">
+                                                    <i class="icon-chevron-left text-10"></i>
+                                                </button>
+                                            </div>
+                                            <div class="cardImage-slider__nav -next">
+                                                <button class="button -blue-1 bg-white size-30 rounded-full shadow-2 js-next">
+                                                    <i class="icon-chevron-right text-10"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="cardImage__wishlist">
+                                        <button class="button -blue-1 bg-white size-30 rounded-full shadow-2">
+                                            <i class="icon-eye text-12"></i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="cruiseCard__content mt-10">
-                            <div class="text-14 lh-14 text-light-1 mb-5">Norwegian Getawayy</div>
-                            <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
-                                <span>7 Night Cruise to the Western Mediterranean</span>
-                            </h4>
-                            <p class="text-light-1 lh-14 text-14 mt-5"></p>
-                            <div class="row y-gap-20 justify-between items-center pt-5">
-                                <div class="col-auto">
-                                    <div class="d-flex items-center">
-                                        <div class="icon-star text-yellow-1 text-10 mr-5"></div>
+                            <div class="cruiseCard__content mt-10">
+                                <div class="text-14 lh-14 text-light-1 mb-5">Kigali Rwanda</div>
+                                <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
+                                    <span>{{ room.name }}</span>
+                                </h4>
+                                <p class="text-light-1 lh-14 text-14 mt-5"></p>
+                                <div class="row y-gap-10 justify-between items-center">
+                                    <div class="col-auto">
+                                        <div class="text-14 text-dark-1 fw-500">Capacity</div>
+                                        <div class="text-14 text-light-1">{{ room.capacity }} People</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="text-14 text-dark-1 fw-500">Size</div>
+                                        <div class="text-14 text-light-1">{{ room.size }}</div>
+                                    </div>
+                                </div>
+                                <div class="row y-gap-20 justify-between items-center pt-5">
+                                    <div class="col-auto">
+                                        <div class="d-flex items-center">
+                                            <div class="icon-star text-yellow-1 text-10 mr-5"></div>
+                                            <div class="text-14 text-light-1">
+                                                <span class="text-15 text-dark-1 fw-500">4.82</span>
+                                                94 reviews
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto">
                                         <div class="text-14 text-light-1">
-                                            <span class="text-15 text-dark-1 fw-500">4.82</span>
-                                            94 reviews
+                                            Price
+                                            <span class="text-16 fw-500 text-dark-1">${{ room.price }}</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-auto">
-                                    <div class="text-14 text-light-1">
-                                        From
-                                        <span class="text-16 fw-500 text-dark-1">US$72</span>
-                                    </div>
-                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    {% endfor %}
 
     <section class="section-bg layout-pt-lg layout-pb-lg">
         <div class="section-bg__item -right -w-1165 bg-light-2"></div>
