Initialize rooms in links

--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -68,7 +68,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <h5 class="text-16 fw-500 mb-30">Other Services</h5>
                             <div class="d-flex y-gap-5 flex-column">
-                                <a href="#">Rooms</a>
+                                <a href="{% url 'base:rooms' %}">Rooms</a>
                             </div>
                         </div>
                     </div>
