--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -29,7 +29,7 @@
                                         <a href="{% url 'base:home' %}">About Us</a>
                                     </li>
                                     <li>
-                                        <a href="{% url 'base:home' %}">Rooms</a>
+                                        <a href="{% url 'base:rooms' %}">Rooms</a>
                                     </li>
                                     <li>
                                         <a href="{% url 'base:home' %}">Contact Us</a>
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    {% if user.is_authenticated %}
+                    {% comment %} {% if user.is_authenticated %}
                         <div class="d-flex items-center ml-20 is-menu-opened-hide md:d-none">
                             <a href="{% url 'auth:logout' %}" class="button px-30 fw-400 text-14 -blue-1 bg-white h-50 text-dark-1">Sign Out</a>
                         </div>
@@ -50,9 +50,9 @@
                             <a href="{% url 'auth:login' %}" class="button px-30 fw-400 text-14 -blue-1 bg-white h-50 text-dark-1">Sign In</a>
                             <a href="{% url 'auth:register' %}" class="button px-30 fw-400 text-14 border-white -blue-1 h-50 text-white ml-20">Register</a>
                         </div>
-                    {% endif %}
+                    {% endif %} {% endcomment %}
                     <div class="d-none xl:d-flex x-gap-20 items-center pl-30 text-white" data-x="header-mobile-icons" data-x-toggle="text-white">
-                        <div><a href="#" class="d-flex items-center icon-user text-inherit text-22"></a></div>
+                        <div><a href="{% url 'auth:login' %}" class="d-flex items-center icon-user text-inherit text-22"></a></div>
                         <div>
                             <button class="d-flex items-center icon-menu text-inherit text-20" data-x-click="html, header, header-logo, header-mobile-icons, mobile-menu"></button>
                         </div>
