--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -3,6 +3,138 @@
 {% block title %} Rooms {% endblock %}
 {% block content %}
 
-    
+    <section class="layout-pt-md layout-pb-lg">
+        <div class="container">
+            <div class="row y-gap-30">
+                <div class="col-xl-3">
+                    {% include 'inc/sidebar.html' %}
+                </div>
+                <div class="col-xl-9">
+                    <div class="row y-gap-10 items-center justify-between">
+                        <div class="col-auto">
+                            <div class="text-18"><span class="fw-500">3,269 properties</span> in Europe</div>
+                        </div>
+
+                        <div class="col-auto">
+                            <div class="row x-gap-20 y-gap-20">
+                                <div class="col-auto">
+                                    <button class="button -blue-1 h-40 px-20 rounded-100 bg-blue-1-05 text-15 text-blue-1">
+                                        <i class="icon-up-down text-14 mr-10"></i>
+                                        Top picks for your search
+                                    </button>
+                                </div>
+
+                                <div class="col-auto d-none lg:d-block">
+                                    <button data-x-click="filterPopup" class="button -blue-1 h-40 px-20 rounded-100 bg-blue-1-05 text-15 text-blue-1">
+                                        <i class="icon-up-down text-14 mr-10"></i>
+                                        Filter
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-30"></div>
+                    <div class="row y-gap-30">
+                        {% for room in rooms %}
+                            <div class="col-12">
+                                <div class="border-top-light pt-30">
+                                    <div class="row x-gap-20 y-gap-20">
+                                        <div class="col-md-auto">
+                                            <div class="cardImage ratio ratio-1:1 w-250 md:w-1/1 rounded-4">
+                                                <div class="cardImage__content">
+                                                    <div class="cardImage-slider rounded-4 overflow-hidden js-cardImage-slider">
+                                                        <div class="swiper-wrapper">
+                                                            <div class="swiper-slide">
+                                                                <img class="col-12" src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                            </div>
+            
+                                                            {% for image in room.images.all %}
+                                                            <div class="swiper-slide">
+                                                                <img class="col-12" src="{{ image.image.url }}" alt="{{ room.name }}">
+                                                            </div>
+                                                            {% endfor %}
+                                                        </div>
+                                                        <div class="cardImage-slider__pagination js-pagination"></div>
+                                                        <div class="cardImage-slider__nav -prev">
+                                                            <button class="button -blue-1 bg-white size-30 rounded-full shadow-2 js-prev">
+                                                            <i class="icon-chevron-left text-10"></i>
+                                                            </button>
+                                                        </div>
+                                                        <div class="cardImage-slider__nav -next">
+                                                            <button class="button -blue-1 bg-white size-30 rounded-full shadow-2 js-next">
+                                                            <i class="icon-chevron-right text-10"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="cardImage__wishlist">
+                                                    <button class="button -blue-1 bg-white size-30 rounded-full shadow-2">
+                                                        <i class="icon-eye text-12"></i>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md">
+                                            <h3 class="text-18 lh-16 fw-500">
+                                                {{ room.name }}
+                                                <div class="d-inline-block ml-10">
+                                                    <i class="icon-star text-10 text-yellow-2"></i>
+                                                    <i class="icon-star text-10 text-yellow-2"></i>
+                                                    <i class="icon-star text-10 text-yellow-2"></i>
+                                                    <i class="icon-star text-10 text-yellow-2"></i>
+                                                    <i class="icon-star text-10 text-yellow-2"></i>
+                                                </div>
+                                            </h3>
+        
+                                            <div class="row x-gap-10 y-gap-10 items-center pt-10">
+                                                <div class="col-auto">
+                                                    <p class="text-14">Kigali Rwanda</p>
+                                                </div>
+                                            </div>
+                                            <div class="row x-gap-10 y-gap-10 pt-20">
+                                                <div class="col-auto">
+                                                    <div class="border-light rounded-100 py-5 px-20 text-14 lh-14">Breakfast</div>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="border-light rounded-100 py-5 px-20 text-14 lh-14">WiFi</div>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="border-light rounded-100 py-5 px-20 text-14 lh-14">Spa</div>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="border-light rounded-100 py-5 px-20 text-14 lh-14">Bar</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-auto text-right md:text-left">
+                                            <div class="row x-gap-10 y-gap-10 justify-end items-center md:justify-start">
+                                                <div class="col-auto">
+                                                    <div class="text-14 lh-14 fw-500">Exceptional</div>
+                                                    <div class="text-14 lh-14 text-light-1">3,014 reviews</div>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <div class="flex-center text-white fw-600 text-14 size-40 rounded-4 bg-blue-1">4.8</div>
+                                                </div>
+                                            </div>
+
+                                            <div class="">
+                                                <div class="text-14 text-light-1 mt-50 md:mt-20">8 nights, 2 adult</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">US$72</div>
+                                                <div class="text-14 text-light-1 mt-5">+US$828 taxes and charges</div>
+
+                                                <a href="#" class="button -md -dark-1 bg-blue-1 text-white mt-24">
+                                                    See Availability <div class="icon-arrow-top-right ml-15"></div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
