--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<header data-add-bg="bg-dark-1" class="header  js-header" data-x="header" data-x-toggle="is-menu-opened">
+<header data-add-bg="" class="header bg-dark-3 js-header" data-x="header" data-x-toggle="is-menu-opened">
     <div data-anim="fade" class="header__container container">
         <div class="row justify-between items-center">
             <div class="col-auto">
