--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -12,7 +12,7 @@
                 <div class="col-xl-9">
                     <div class="row y-gap-10 items-center justify-between">
                         <div class="col-auto">
-                            <div class="text-18"><span class="fw-500">3,269 properties</span> in Europe</div>
+                            {% comment %} <div class="text-18"><span class="fw-500">20 rooms</span> in Kigali</div> {% endcomment %}
                         </div>
 
                         <div class="col-auto">
