--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/app.html' %}
 {% load static %}
+{% load humanize %}
 {% block title %} Rooms {% endblock %}
 {% block content %}
 
@@ -112,7 +113,7 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">{{ room.capacity }} people</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">${{ room.price }}</div>
+                                                <div class="text-22 lh-12 fw-600 mt-5">${{ room.price|intcomma }}</div>
                                                 <div class="text-14 text-light-1 mt-5">$10 taxes and charges</div>
 
                                                 <a href="{% url 'base:getRoom' room.slug %}" class="button -md -dark-1 bg-blue-1 text-white mt-24">
