--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/app.html' %}
 {% load static %}
+{% load humanize %}
 {% block title %} {{ room.name }} {% endblock %}
 {% block content %}
 
@@ -108,7 +109,52 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
+                    <div class="d-flex justify-end js-pin-content" data-offset="350">
+                        <div class="px-30 py-30 rounded-4 border-light bg-white w-360 lg:w-full shadow-4">
+                            <div class="d-flex justify-between items-center">
+                                <div class="text-14 text-light-1">
+                                    From <span class="text-20 fw-500 text-dark-1 ml-5">${{ room.price|intcomma }}</span>
+                                </div>
                     
+                                <div class="d-flex items-center justify-end">
+                                    <div class="text-14 lh-14 text-right">
+                                        <div class="fw-600">Exceptional</div>
+                                        3,014 reviews
+                                    </div>
+                    
+                                    <div class="flex-center size-40 rounded-4 bg-blue-1 text-1 fw-600 text-white ml-20">
+                                        4.8
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="row y-gap-20 pt-30">
+                                <div class="col-12">
+                                    <div class="searchMenu-date px-20 py-10 border-light rounded-4 -right js-form-dd js-calendar js-calendar-el">
+                                        <div data-x-dd-click="searchMenu-date">
+                                            <h4 class="text-15 fw-500 ls-2 lh-16">Departure Month</h4>
+                                            <div class="capitalize text-15 text-light-1 ls-2 lh-16">
+                                                <span class="js-first-date">Wed 2 Mar</span>
+                                                -
+                                                <span class="js-last-date">Fri 11 Apr</span>
+                                            </div>
+                                        </div>
+                                        <div class="searchMenu-date__field shadow-2" data-x-dd="searchMenu-date" data-x-dd-toggle="-is-active">
+                                            <div class="bg-white px-30 py-30 rounded-4">
+                                                <div class="elCalendar js-calendar-el-calendar"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                    
+                                <div class="col-12">
+                                    <button class="button -dark-1 py-15 px-35 h-60 col-12 rounded-4 bg-blue-1 text-white">
+                                        Book Now
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
