--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -359,99 +359,58 @@
                         </div>
                     </div>
                     <form method="post">
+                        {% csrf_token %}
                         <div class="row y-gap-30 pt-30">
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Location</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.location }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Staff</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.staff }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Cleanliness</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.cleanliness }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Value For Money</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.value_for_money }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Comfort</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.comfort }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Facilities</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.facilities }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Free WIFI</div>
-                                <div class="d-flex x-gap-5 items-center pt-10">
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                    <div class="icon-star text-10 text-yellow-1"></div>
-                                </div>
+                                {{ form.free_wifi }}
                             </div>
                         </div>
                         <div class="row y-gap-30 pt-20">
                             <div class="col-xl-6">
                                 <div class="form-input ">
-                                    <input type="text" required>
-                                    <label class="lh-1 text-16 text-light-1">Text</label>
+                                    {{ form.name }}
+                                    <label class="lh-1 text-16 text-light-1">Name</label>
                                 </div>
                             </div>
                             <div class="col-xl-6">
                                 <div class="form-input ">
-                                    <input type="text" required>
+                                    {{ form.email }}
                                     <label class="lh-1 text-16 text-light-1">Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-input ">
-                                    <textarea required rows="4"></textarea>
+                                    {{ form.comment }}
                                     <label class="lh-1 text-16 text-light-1">Write Your Comment</label>
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <button href="#" class="button -md -dark-1 bg-blue-1 text-white">
+                                <button type="submit" class="button -md -dark-1 bg-blue-1 text-white">
                                     Post Review <div class="icon-arrow-top-right ml-15"></div>
                                 </button>
                             </div>
