--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -89,7 +89,7 @@
         
                                             <div class="row x-gap-10 y-gap-10 items-center pt-10">
                                                 <div class="col-auto">
-                                                    <p class="text-14">Kigali Rwanda</p>
+                                                    <p class="text-14">KK 35 Avenue, Kigali, Rwanda</p>
                                                 </div>
                                             </div>
                                             <div class="row x-gap-10 y-gap-10 pt-20">
