--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
                                 </div>
                             </div>
                             <div class="cruiseCard__content mt-10">
-                                <div class="text-14 lh-14 text-light-1 mb-5">Kigali Rwanda</div>
+                                <div class="text-14 lh-14 text-light-1 mb-5">KK 35 Avenue, Kigali, Rwanda</div>
                                 <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
                                     <span>{{ room.name }}</span>
                                 </h4>
@@ -208,7 +208,7 @@
                                 </div>
                             </div>
                             <div class="cruiseCard__content mt-10">
-                                <div class="text-14 lh-14 text-light-1 mb-5">Kigali Rwanda</div>
+                                <div class="text-14 lh-14 text-light-1 mb-5">KK 35 Avenue, Kigali, Rwanda</div>
                                 <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
                                     <span>{{ room.name }}</span>
                                 </h4>
